Added basic css.

--- a/WebContents/getItem.html
+++ b/WebContents/getItem.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-<head><title>Get item here!</title></head>
+<head>
+<title>Get item here!</title>
+<link rel="stylesheet" type="text/css" href="style.css" /> 
+</head>
+
 <body>
 
+<div id="nav-bar">
+<img src="images/logo.png" id="ebay-logo">
+</div>
+
+<div id="content">
 <h1>Item Search</h1>
 
 <p>Enter an item below and hit submit!</p>
@@ -20,6 +29,7 @@ Take the input parameter id whose value is the itemID of the item that you shoul
   Id: <input type="text" name="id"><br>
   <input type="submit" /> 
 </form>
+</div>
 
 </body>
 </html>
