--- a/WebContents/keywordSearch.html
+++ b/WebContents/keywordSearch.html
@@ -5,6 +5,7 @@
 <title>Search here!</title>
 <script type="text/javascript" src="autosuggest.js"></script>
 <script type="text/javascript" src="suggestions.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css" /> 
 <link rel="stylesheet" type="text/css" href="autosuggest.css" /> 
 <script type="text/javascript">
     window.onload = function () {
@@ -15,6 +16,11 @@
 
 <body>
 
+<div id="nav-bar">
+<img src="images/logo.png" id="ebay-logo">
+</div>
+
+<div id="content">
 <h1>Keyword Search</h1>
 
 <p>Enter a search below and hit submit!</p>
@@ -40,6 +46,8 @@ SearchServlet class.
   <input type="hidden" name="numResultsToReturn" value="20" /> 
   <input type="submit" /> 
 </form>
+
+</div>
 
 </body>
 </html>
