--- a/WebContents/getItem.html
+++ b/WebContents/getItem.html
@@ -9,7 +9,19 @@
 <body>
 
 <div id="nav-bar">
-<img src="images/logo.png" id="ebay-logo">
+<div id="logo-container">
+<img src="images/logo.png" id="logo">
+</div>
+<div id="menu-button">
+	Menu
+</div>
+<div id="menu">
+	<ul>
+		<li><a href="">Home</a></li>
+		<li><a href="">Search</a></li>
+		<li><a href="">Item</a></li>
+	<ul>
+</div>
 </div>
 
 <div id="content">
@@ -31,5 +43,24 @@ Take the input parameter id whose value is the itemID of the item that you shoul
 </form>
 </div>
 
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+<script>
+$(document).ready(
+    function(){
+        $("#menu-button").click(function () {
+            $("#menu").toggle();
+        });
+    });
+
+var $window = $(window);
+$window.resize(
+	function() {
+    	if($window.width() >= 600)
+         	$("#menu").show();
+         else
+         	$("#menu").hide();
+    });
+
+</script>
 </body>
 </html>
