--- a/WebContents/index.html
+++ b/WebContents/index.html
@@ -17,9 +17,8 @@
 			</div>
 			<div id="menu">
 				<ul>
-					<li><a href="">Home</a></li>
-					<li><a href="">Search</a></li>
-					<li><a href="">Item</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="keywordSearch.html">Search</a></li>
 				<ul>
 			</div>
 		</div>
