--- a/WebContents/index.html
+++ b/WebContents/index.html
@@ -25,6 +25,7 @@
 	
 		<div id="content">
 			<h1>eBay Search Web Site</h1>
+			Click <a href="keywordSearch.html">here</a> to use basic keyword search!
 		</div>
 	
 		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
