--- a/WebContents/getItem.html
+++ b/WebContents/getItem.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Get item here!</title>
+		<meta name="viewport" content="initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
     
