--- a/WebContents/index.html
+++ b/WebContents/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>eBay Search</title>
+		<meta name="viewport" content="initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css" /> 
 	</head>
     
