--- a/WebContents/keywordSearch.html
+++ b/WebContents/keywordSearch.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Search here!</title>
+		<meta name="viewport" content="initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css" /> 
 		<link rel="stylesheet" type="text/css" href="autosuggest.css" /> 
 		<script type="text/javascript" src="autosuggest.js"></script>
