Updated viewport to "width=device-width".

--- a/WebContents/index.html
+++ b/WebContents/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>eBay Search</title>
-		<meta name="viewport" content="initial-scale=1">
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="style.css" /> 
 	</head>
     
